# BloomFilter

./: CMakeLists.txt  README.md
include/: bit_array.h  bits.h  bloom_filter.h  bloom_filter_interface.h  counter_array.h  hash.h  object.h  types.h
src/: bit_array.cpp  bloom_filter.cpp  counter_array.cpp
test/: CMakeLists.txt  bit_array_test.cpp  counter_array_test.cpp  object_test.cpp
